--- a/src/main/resources/static/catalogo/index.html
+++ b/src/main/resources/static/catalogo/index.html
@@ -43,6 +43,7 @@
             top: 110px;
             right: 50px;
             z-index: 1;
+            font-size: 200%;
         }
     </style>
     <title>Tilla Catalogo</title>
