--- a/src/main/resources/static/catalogo/html/carrinho.html
+++ b/src/main/resources/static/catalogo/html/carrinho.html
@@ -25,7 +25,7 @@
             <div class="md-list-item-text">
                 <textarea class="form-control" rows="10" id="texto" select-on-click>{{getTexto()}}</textarea>
             </div>
-            <md-button aria-label="no" class="md-icon-button" ng-href="whatsapp://send?text={{getTexto(true)}})"><i class="fa fa-whatsapp" aria-hidden="true"></i></md-button>
+            <md-button aria-label="no" class="md-icon-button" ng-href="whatsapp://send?text={{getTexto(true)}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></md-button>
             <md-divider></md-divider>
         </md-list-item>
     </md-list>
