--- a/src/main/resources/static/catalogo/html/carrinho.html
+++ b/src/main/resources/static/catalogo/html/carrinho.html
@@ -29,6 +29,6 @@
             <md-divider></md-divider>
         </md-list-item>
     </md-list>
-
+<a ng-click="limparCarrinho()">Limpar carrinho</a>
 
 </div>
