--- a/src/main/resources/static/catalogo/html/home.html
+++ b/src/main/resources/static/catalogo/html/home.html
@@ -40,7 +40,7 @@
                     <md-list>
                         <md-list-item class="md-3-line md-long-text">
                             <div class="md-list-item-text">
-                                <p>{{produto.descCurta}}({{produto.preco}})</p>
+                                <p>{{produto.descCurta}} (${{produto.preco}})</p>
                             </div>
                             <md-button aria-label="no" class="md-icon-button" ng-href="whatsapp://send?text={{produto.descCurta}}({{produto.preco}})"><i class="fa fa-whatsapp" aria-hidden="true"></i></md-button>
                             <md-divider></md-divider>
