--- a/src/main/resources/static/catalogo/html/home.html
+++ b/src/main/resources/static/catalogo/html/home.html
@@ -1,3 +1,10 @@
+<div ng-show="carregando" class="col-md-12 text-center">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+</div>
+<div class="alert alert-danger" role="alert" ng-show="error">
+    <strong>Erro</strong> Erro ao gravar: {{error}}.
+</div>
+
 <div class="form-group" layout="row">
     <label>mostrar disponiveis:</label>
     <md-switch ng-model="embh" aria-label="Em bh">
@@ -15,12 +22,10 @@
 </div>
 
 <div class="row">
-
-
-    <div ng-repeat="produto in produtos| tudo:busca:embh:embsb as results  track by $index " class="col-md-4">
+    <div ng-repeat="produto in produtos| tudo:busca:embh:embsb as results  track by $index " class="col-md-12">
         <md-card>
 
-            <img class="produtoImg" ng-src="./img/{{produto.imgurl}}" class="md-card-image">
+            <img class="produtoImg" ng-src="{{produto.imgurl}}" class="md-card-image">
 
             <md-card-title>
                <md-toolbar class="md-theme-light">
@@ -28,9 +33,22 @@
                         <span>{{produto.nome}} (${{produto.preco}})</span>
                     </h2>
                     <md-card-actions layout="row" layout-align="end center">
-                        <md-button aria-label="no" class="md-icon-button" ng-click="removeCart(produto)"><i class="fa fa-minus" aria-hidden="true"></i></md-button>
-                        <md-button aria-label="no" class="md-icon-button" ng-click="addCart(produto)"><i class="fa fa-plus" aria-hidden="true"></i></md-button>
                     </md-card-actions>
+                   <md-fab-toolbar md-open="demo.isOpen" count="demo.count"
+                                   md-direction="left">
+                       <md-fab-trigger class="align-with-text">
+                           <md-button aria-label="menu" class="md-fab md-warm">
+                               <md-icon md-svg-src="img/icons/menu.svg"></md-icon>
+                           </md-button>
+                       </md-fab-trigger>
+                       <md-toolbar>
+                           <md-fab-actions class="md-toolbar-tools">
+                               <md-button aria-label="no" class="md-icon-button" ng-click="addCart(produto)"><i class="fa fa-plus" aria-hidden="true"></i></md-button>
+                               <md-button aria-label="no" class="md-icon-button" ng-click="removeCart(produto)"><i class="fa fa-minus" aria-hidden="true"></i></md-button>
+                                <a aria-label="no" class="md-icon-button" ng-href="#/editar/{{produto.id}}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                           </md-fab-actions>
+                       </md-toolbar>
+                   </md-fab-toolbar>
                 </md-toolbar>
             </md-card-title>
 
@@ -67,6 +85,10 @@
 
 
     </div>
+    <div class="col-md-12">
+        <a ng-href="/#/cadastro" class="btn btn-primary">Cadastrar Novo</a>
+    </div>
+
 </div>
 
 </div>
