--- a/src/main/resources/static/catalogo/index.html
+++ b/src/main/resources/static/catalogo/index.html
@@ -27,7 +27,11 @@
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 
     <script src="./js/tillacatalogo.js"  charset="ISO-8859-1"></script>
+
+    <script src="../js/tillaconfig.js"  charset="ISO-8859-1"></script>
     <script src="./js/CarrinhoController.js"></script>
+    <script src="./js/CadastroController.js"  charset="ISO-8859-1"></script>
+    <script src="./js/EditarController.js"  charset="ISO-8859-1"></script>
     <script src="./js/CatalogoRotas.js"></script>
     <script src="./js/calculaFrete.js"></script>
 
