--- a/src/main/resources/static/catalogo/html/home.html
+++ b/src/main/resources/static/catalogo/html/home.html
@@ -86,7 +86,7 @@
 
     </div>
     <div class="col-md-12">
-        <a ng-href="/#/cadastro" class="btn btn-primary">Cadastrar Novo</a>
+        <a ng-href="/catalogo/index.html#/cadastro" class="btn btn-primary">Cadastrar Novo</a>
     </div>
 
 </div>
