--- a/src/main/resources/static/catalogo/html/editar.html
+++ b/src/main/resources/static/catalogo/html/editar.html
@@ -34,9 +34,11 @@
 </div>
 <div class="form-group">
     <label for="imgurl">url da imagem (opciona):</label>
-    <div ng-repeat="imagem in novoproduto.imagens">
+    <div class="form-group" ng-repeat="imagem in novoproduto.imagens">
         <input ng-blur="clearId()"  class="form-control" ng-model="imagem.url" id="imgurl">
+        <button class="btn btn-danger" ng-click="removeImagem($index,novoproduto )">-</button>
     </div>
+    <button class="btn btn-primary" ng-click="addNovaImagem(novoproduto)">+</button>
 </div>
 <div class="form-group">
     <label for="quantidadebh">Quantidade em BH:</label>
