--- a/src/main/resources/static/frete/index.html
+++ b/src/main/resources/static/frete/index.html
@@ -21,15 +21,23 @@
             <div class="col-md-6 col-md-padding-3">
                 <h3>Gerar mensagem frete:</h3>
                 <div class="form-group">
-                    <label for="cep">cep:</label>
+                    <label for="cep">cep destinatario:</label>
                     <input type="text" class="form-control" id="cep" ng-model="cep">
                 </div>
+
+                <form ng-init="remetente = '31160440'">
+                    Remetente:
+                    <input type="radio" ng-model="remetente" value="31160440" checked="checked" > Belo Horizonte
+                    <input type="radio" ng-model="remetente" value="70873060">Brasilia
+                    <input type="radio" ng-model="remetente" value="outro">Outro
+                    <input type="text" ng-model="remetente" ng-show="remetente != '70873060' && remetente != '31160440'">
+                </form>
                 
                 <div ng-show="carregando" class="col-md-12 text-center">
                     <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
                 </div>
                 <div class="form-group">
-                    <button type="button" class="btn btn-default btn-lg" ng-click="frete(cep);">gerar texto</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="frete(cep, remetente);">gerar texto</button>
                     <button type="button" class="btn btn-default btn-lg" ng-click="limpar();">Limpar</button>
                     <a type="button" class="btn btn-default btn-lg" ng-show="showshare" ng-href="whatsapp://send?text={{texto}}">Enviar no whats</a>
                 </div>
