--- a/src/main/resources/static/frete/index.html
+++ b/src/main/resources/static/frete/index.html
@@ -15,7 +15,7 @@
 <body ng-controller="tillaCtrl">
     <div class="container">
         <div class="alert alert-warning" ng-show="errotag">
-            <strong>Warning!</strong> Voce deve colocar as tags [valor] e [prazo] no seu texto.
+            <strong>Warning!</strong> Voce deve colocar as tags [valor] e [prazo] no seu texto. CLIQUE NO BOTÃO [LIMPAR]
         </div>
         <div class="row session">
             <div class="col-md-6 col-md-padding-3">
