versao simplificada do cliente

--- a/src/main/resources/static/adm/novavenda.html
+++ b/src/main/resources/static/adm/novavenda.html
@@ -61,7 +61,8 @@
              <div ng-show="venda.criada" class="col-md-6 col-md-padding-3">
                  <div class="form-group">
                      <label for="link">Link (enviar para a cliente):</label>
-                     <input type="text" class="form-control" id="link" ng-model="venda.link" select-on-click>
+                     <!-- <input type="text" class="form-control" id="link" ng-model="venda.link" select-on-click> -->
+                     <textarea class="form-control" rows="15" id="link" ng-model="texto" select-on-click></textarea>
                  </div>
              </div>
 
